--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -34,7 +34,7 @@ $nav_mobile_delay: 0.3s;
 
 $color_input_error: #ffa0a0;
 
-
+$item_delete: red;
 
 $text_basic: #333;
 $text_selected: #EEE;
@@ -49,7 +49,7 @@ $color_success: rgb(65, 156, 65);
 
 body {
     --text_nav: #444;
-    --text_nav_selected: #DDD;
+    --text_nav_selected: #FFF;
     --bg: rgb(235, 235, 235);
     --input_error: #ffa0a0;
     --main: rgb(100, 181, 245);
@@ -84,6 +84,10 @@ body {
     --rating_money: rgb(168, 168, 136);
 
     --cart_informer: #d6e041;
+
+    --scroll_bg: rgb(235, 235, 235);
+    --scroll_handle: #818181;
+    --scroll_handle_active: #3f3f3f;
  }
 
 
@@ -125,7 +129,46 @@ body {
     --rating_money: rgb(185, 185, 141);
 
     --cart_informer: #d6e041;
+
+    --scroll_bg: rgb(235, 235, 235);
+    --scroll_handle: #818181;
+    --scroll_handle_active: #3f3f3f;
  }
+
+
+ 
+@mixin scroll_thin {
+    &::-webkit-scrollbar {
+        width: 6px;
+    }
+    
+    &::-webkit-scrollbar-track {
+        border-radius: 3px;
+        background: var(--scroll_bg);
+    }
+      
+    &::-webkit-scrollbar-thumb {
+        border-radius: 3px;
+        background: var(--scroll_handle);
+    }
+      
+    &::-webkit-scrollbar-thumb:hover {
+        background: var(--scroll_handle_active);
+    }
+}
+
+
+@mixin margin_first_p {
+    margin-top: 2.5rem;
+                
+    @include respond-to(sm) {
+        margin-top: 2rem;
+    }
+
+    @include respond-to(xs) {
+        margin-top: 1.5rem;
+    }
+}
 
 
 
@@ -146,3 +189,4 @@ body {
         @media (max-width: $xl) { @content } 
     }
 }
+
