--- a/src/components/FiberPreview/fiber-preview.scss
+++ b/src/components/FiberPreview/fiber-preview.scss
@@ -1,21 +1,21 @@
 @use '/src/assets/css/variables' as *;
 
 
-.fiber-preview__item {
+.fiber{
     height: 100%;
 
 
-    & > .img__container {
-        height: 200px;
+    & > .img-cont{
         width: 100%;
+        aspect-ratio: 1.3;
         position: relative;
+        border-radius: $brad_md;
+        overflow: hidden;
 
         @include respond-to(sm) {
-            height: 170px;
         }
 
         @include respond-to(xs) {
-            height: 200px;
         }
         
         & > img {
@@ -25,14 +25,13 @@
         }
     }
 
-    & .fiber__descr {
+    & .fiber__info {
         margin-top: 10px;
         width: 100%;
 
         & span {
             display: block;
             margin-top: 5px;
-            font-style: 18px;
 
             &:first-child {
                 margin-top: 0;
