--- a/src/components/News/news.scss
+++ b/src/components/News/news.scss
@@ -1,16 +1,40 @@
 @use '/src/assets/css/variables' as *;
 
 
-.news {
-    width: 100%;
-    margin-left: 15px;
-    margin-right: 15px;
+.news-item {
+    margin-left: 18px;
+    margin-right: 18px;
     max-width: 22%;
     min-width: 250px;
+    width: 100%;
+    border: 1px solid rgba(var(--main_RGB), 0.5);
+    transition: border $transition_theme;
+    border-radius: $brad_md;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(#286181, 0.1);
+    padding: 15px 15px 25px 15px;
+    margin-bottom: 30px;
 
-    & > .img__container {
-        height: 230px;
+    @include respond-to(lg) {
+        min-width: 220px;
+    }
+
+    @include respond-to(xs) {
+        min-width: 80%;
+    }
+
+    &:hover {
+        border-color: 1px solid var(--main_em);
+        transition: border $transition_fast;
+    }
+
+
+    & > .img-cont {
         width: 100%;
+        aspect-ratio: 1;
         position: relative;
         border-radius: 5px;
         overflow: hidden;
@@ -25,47 +49,48 @@
     & .news__content {
         display: flex;
         flex-direction: column;
-        padding-top: 20px;
+        padding-top: 10px;
         flex-grow: 1;
 
 
-        & > .news_text {
+        & > .news__text {
             width: 100%;
             display: flex;
             flex-direction: column;
     
+            span {
+                font-size: .9rem;
+                font-weight: 400;
+                white-space: nowrap;
+
+                @include respond-to(sm) {
+                    font-size: .8rem;
+                }
+            
+                @include respond-to(xs) {
+                    font-size: .6rem;
+                }
+            }
+
+
             h3 {
                 align-self: flex-start;
                 color: var(--main_em);
-                //font-size: 24px;
                 font-weight: 700;
                 word-break: break-all;
             }
 
-    
-            span {
-                font-size: 16px;
-                font-weight: 600;
-                white-space: nowrap;
-    
-                //align-self: flex-start;
-                @include respond-to(sm) {
-                    font-size: 24px;
-                }
-            
-                @include respond-to(xs) {
-                    font-size: 12px;
-                }
-            }
-
 
             p {
-                margin-top: 20px;
-                text-indent: 0;
-                //font-size: 17px;
-                font-weight: 500;
+                margin-top: 10px;
                 margin-bottom: 20px;
+                text-indent: 0rem;
                 word-break: break-all;
+
+                @include respond-to(sm) {
+                    margin-top: 5px;
+                    margin-bottom: 15px;
+                }
             }
     
     
@@ -73,17 +98,46 @@
 
 
         & .button_news {
+            align-self: flex-start;
+            padding: 8px 60px 8px 15px;
+            border-radius: 10px;
+            color: var(--text);//;
+            background-color: var(--main);
+            transition: background-color $transition_theme, color $transition_theme, box-shadow $transition_fast;
+            border: none;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            position: relative;
+            border-radius: $brad_md;
             margin-top: auto;
+        
+        
+            & > svg  {
+                max-height: 80%;
+                right: 0;
+                margin-right: 25px;
+                fill: var(--text);
+                position: absolute;
+                transition: margin .2s;
+            }
+        
+            &:hover {
+                & > svg {
+                    margin-right: 15px;
+                }
+                box-shadow: 0px 0px 15px 0px var(--main);;
+            }
+
+
+            /*@include respond-to(md) {
+                margin-top: 5px;
+                margin-bottom: 15px;
+            }*/
         }
 
 
     }
-
-
-
-
-
-
 
 
 }
