--- a/src/components/NewsBlock/news_block.scss
+++ b/src/components/NewsBlock/news_block.scss
@@ -1,9 +1,9 @@
 @use '/src/assets/css/variables' as *;
 
-.news-block {
+section.news {
     width: 100%;
     //border: 1px solid red;
-    padding-top: 20px;
+    //padding-top: 20px;
     padding-bottom: 40px;
     display: flex;
     align-items: stretch;    
@@ -11,9 +11,22 @@
     flex-wrap: wrap;
     position: relative;
     min-height: 300px;
-
+    
     @include respond-to(xs) {
         width: 100%;
+    }
+
+    & > h2 {
+        width: 100%;
+        margin-bottom: 50px;
+
+        @include respond-to(sm) {
+            margin-bottom: 40px;
+        }
+
+        @include respond-to(xs) {
+            margin-bottom: 30px;
+        }
     }
 
     & >  .break-new-line {
