--- a/src/pages/Fibers/fibers.scss
+++ b/src/pages/Fibers/fibers.scss
@@ -4,7 +4,7 @@
     background-color: var(--bg);
     transition: background-color $transition-theme;
 	flex-grow: 1;
-	padding-bottom: 100px;
+	//padding-bottom: 100px;
 	
 
 		& > .block_text {
@@ -16,28 +16,39 @@
 		}
 
 
-	& .fibers__container {
+	& .fibers {
 		width: 100%;
 		margin-top: 70px;
 		display: flex;
 		flex-wrap: wrap;
 		align-items: stretch;
+		gap: 5%;
 
 		& > a {
 			width: 25%;
 			margin-bottom: 1%;
 			padding: 20px;
+			overflow: hidden;
+			border: 1px solid var(--main);
+			border-radius: $brad_md;
+
+			&:hover {
+				border-color: 1px solid var(--main_em);
+				transition: border $transition_fast;
+			}
 
 			@include respond-to(md) {
-				width: 33%;
+				width: 30%;
 			}
 
 			@include respond-to(sm) {
-				width: 50%;
+				width: 45%;
 			}
 			
 			@include respond-to(xs) {
-				padding: 0px;
+				margin-left: 10px;
+				margin-right: 10px;
+				padding: 15px;
 				margin-bottom: 50px;
 				width: 100%;
 			}
