--- a/src/pages/NewsDetails/news-details.scss
+++ b/src/pages/NewsDetails/news-details.scss
@@ -3,7 +3,7 @@
 
 .page_news-details {
 
-    & .date {
+    & .news__date {
         display: block;
         font-size: 18px;
         text-align: center;
@@ -22,7 +22,7 @@
         width: 100%;
         margin-top: 40px;
         
-        & .images__container {
+        & .images {
             margin-top: 50px;
             height: 400px;
             width: 100%;
@@ -38,14 +38,6 @@
 
             @include respond-to(xs) {
                 height: 60vw;
-            }
-
-            & > img {
-                width: 100%;
-                height: 100%;
-                margin-left: auto;
-                margin-right: auto;
-                object-fit: contain;
             }
 
             & .splider_common__wrapper {
