--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -133,13 +133,49 @@ body {
     --scroll_bg: rgb(235, 235, 235);
     --scroll_handle: #818181;
     --scroll_handle_active: #3f3f3f;
- }
+}
+
+
+@mixin fs_base {
+    font-size: 1.1rem;
+    
+    @include respond-to(md) {
+        font-size: 1rem;
+    }
+
+    @include respond-to(sm) {
+        font-size: 1rem;
+    }
+    
+    @include respond-to(xs) {
+        font-size: .9rem;
+    }
+}
+
+
+@mixin fs_smaller {
+    font-size: 1rem;
+    
+    @include respond-to(md) {
+        font-size: .9rem;
+    }
+
+    @include respond-to(sm) {
+        font-size: .9rem;
+    }
+    
+    @include respond-to(xs) {
+        font-size: .8rem;
+    }
+}
+
 
 
  
 @mixin scroll_thin {
     &::-webkit-scrollbar {
         width: 6px;
+        height: 6px;
     }
     
     &::-webkit-scrollbar-track {
