--- a/src/components/RatingLine/rating-line.scss
+++ b/src/components/RatingLine/rating-line.scss
@@ -1,16 +1,16 @@
 @use '/src/assets/css/variables' as *;
 
 
-.rating_value {
+.rating_line {
     width: 100%;
-    //height: 100%;
-    //height: 60px;
     position: relative;
     display: flex;
     flex-direction: column;
     
     
-    & > .value__container {
+    & > .rating_line__line {
+        overflow: hidden;
+        border-radius: $brad_sm;
         width: 100%;    
         aspect-ratio: 5;
         position: relative;
@@ -18,7 +18,7 @@
         transition: background-color $transition-theme;
 
 
-        & > .rating__value {
+        & > .rating_line__value {
             height: 100%;
             position: relative;
             transition: background-color $transition-theme;
@@ -65,20 +65,21 @@
 
     }
 
-    & > .rating__legend {
+    & > .rating_line__legend {
         margin-top: 2px;
+        
+        @include respond-to(sm) {
+            margin-top: 0;
+        }
+        
+        
         & > span {
             color: var(--text);
-            font-weight: 700;
-            
-            @include respond-to(xs) {
-                font-weight: 400;   
-                font-size: 13px;
-            }
+            @include fs_smaller;
             
             & > span {
-                font-weight: 400;
-                font-size: .8em;
+                font-weight: 300;
+                font-size: .75em;
                 color: var(--text_mild);
 
                 @include respond-to(xs) {
