--- a/src/components/RatingMoney/rating-money.scss
+++ b/src/components/RatingMoney/rating-money.scss
@@ -6,9 +6,10 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     
     
-    & > .money__container {
+    & > .rating_money__content {
         width: 100%;    
         position: relative;
         display: flex;
@@ -16,10 +17,12 @@
         aspect-ratio: 5;
         justify-content: center;
 
-        & > .img__container {
+        & > .img-cont {
             height: 100%;
+            display: flex;
+            align-items: center;
 
-        & > svg {
+            & > svg {
                 height: 100%;
                 stroke: var(--rating_money);
                 filter: drop-shadow(0px 0px 3px var(--rating_money));
@@ -29,12 +32,11 @@
                 }
             }
         }
-
-
     }
 
 
-    & > .rating__legend {
+    & > .rating_money__legend {
+        display: none;
         margin-top: 2px;
         & > span {
             color: var(--text);
