--- a/src/pages/Fiber/fiber.scss
+++ b/src/pages/Fiber/fiber.scss
@@ -2,182 +2,126 @@
 
 
 .page_fiber {
-    padding-bottom: 100px;  
+    @include respond-to(xs) {
+        padding-bottom: 20px;
+    }
 
-    & .fiber__item {
+    & .fiber {
         width: 100%;
         display: flex;
         align-items: center;
         flex-direction: column;
+
     
-    
-        & > .fiber__splider__container {
-            height: 300px;
-            width: 100%;
+        & .fiber__images-text {
             margin-top: 40px;
-    
-            @include respond-to(md) {
-                height: 230px;
-            }
-    
-    
-            @include respond-to(sm) {
-                height: 30vw;
-            }
-    
-            @include respond-to(xs) {
-                height: 60vw;
-            }
-    
-        }
-    
-        & > .fiber__descr__container {
-            position: relative;
-            // border: 2px solid yellow;
-            padding-top: 60px;
             width: 100%;
-    
-            @include respond-to(sm) {
-                padding-top: 40px;
-            }
-           
-    
-    
-            & > .block_text {
-    
-                & h3 {
-                    text-align: center;
-                    color: var(--main_em);
+
+            & > .splider_common__wrapper {
+                height: 300px;
+                width: 100%;
+        
+                @include respond-to(md) {
+                    height: 230px;
                 }
-    
-                & > .features__container {
-                    margin-top: 70px;
-                    width: 100%;
+        
+                @include respond-to(sm) {
+                    height: 30vw;
+                }
+        
+                @include respond-to(xs) {
+                    height: 60vw;
+                }
+            }
+        }
+
+        & > .block_text {
+
+            & > section {
+                margin-top: 80px;
+
+                & > h3 {
+                    display: block;
+                    margin-bottom: 40px;
+                }
+            }
+
+            & > .colors {
+                & > .colors__items {
+                    display: flex;
+                    align-items: stretch;
+                    justify-content: center;
+                    max-width: 80%;
                     margin-left: auto;
                     margin-right: auto;
-    
-                    & .proscons__container {
-                        margin-top: 20px;
+                    flex-wrap: wrap;
+                    gap: 25px;
+
+                    @include respond-to(md) {
+                        max-width: 100%;
                     }
                     
-    
-                }
-    
-                & > .colors {
-                    margin-top: 70px;
-    
-                    & > .colors__container {
-                        margin-top: 40px;
-                        display: flex;
-                        align-items: stretch;
-                        justify-content: center;
-                        max-width: 80%;
-                        margin-left: auto;
-                        margin-right: auto;
-                        flex-wrap: wrap;
-                        gap: 25px;
+                    @include respond-to(sm) {
+                        gap: 15px;
+                    }
 
-                        @include respond-to(md) {
-                            max-width: 100%;
-                        }
+                    @include respond-to(xs) {
+                        gap: 10px;
+                    }
+    
+                    & > .color {
+                        width: 100px;
+                        cursor: pointer;
+                        box-sizing: border-box;
+                        border-radius: 5px;
+                        overflow: hidden;
+                        border: 1px solid var(--main);
+                        padding: 5px;
+
                         
                         @include respond-to(sm) {
-                            gap: 15px;
+                            width: 80px;
                         }
-    
+                        
+                        
                         @include respond-to(xs) {
-                            gap: 10px;
+                            width: 70px;
                         }
-        
-                        & > .color__container {
-                            width: 100px;
-                            cursor: pointer;
-                            box-sizing: border-box;
-                            border-radius: 5px;
+                        
+                        & .color__img-cont {
+                            width: 100%;
+                            aspect-ratio: 1;
                             overflow: hidden;
-                            border: 1px solid var(--main);
-                            padding: 5px;
+                            position: relative;
+                            border-radius: $brad_sm;
 
-                            
-                            @include respond-to(sm) {
-                                width: 80px;
-                            }
-                            
-                            
-                            @include respond-to(xs) {
-                                width: 70px;
-                            }
-    
-                            &:hover > .img-container > img {
+                            &:hover > img {
                                 transform: scale(1.2);
                             }
                             
-                            & .img-container {
+                            & > img {
+                                transition: transform $transition_fast;
                                 width: 100%;
-                                aspect-ratio: 1;
-                                //overflow: hidden;
-                                position: relative;
-                                
-                                & > img {
-                                    transition: transform $transition_fast;
-                                    width: 100%;
-                                    height: 100%;
-                                    object-fit: cover;
-                                }
+                                height: 100%;
+                                object-fit: cover;
                             }
-
-                            & .color__descr {
-                                display: block;
-                                margin-top: 5px;
-                            }
-                            
                         }
-            
-            
+
+                        & .color__descr {
+                            display: block;
+                            margin-top: 10px;
+                        }
+                        
                     }
                 }
-    
-                & .proscons {
-                    margin-top: 70px;
-    
-    
-                    & .proscons__container {
-                        margin-top: 20px;
-    
-                    }
-                }
-    
-    
-    
-                & .buttons {
-                    display: flex;
-                    width: 100%;
-                    justify-content: center;
-                    align-items: center;
-                    margin-top: 50px;
-    
-                    & .link_compareList {
-                        width: fit-content;
-                    }
-    
-    
-                    & .button_edit {
-                        margin-right: 20px;
-                        height: 40px;
-                        width: 45px;
-                    }
-            
-            
-                    & > .button_delete__container {
-                        width: 30px;
-                        height: 30px;
-                        margin-left: 30px;
-                    }
-                }
-    
             }
-    
-    
+        }
+
+        & .link_compare {
+            margin-top: 50px;
+            width: fit-content;
+            margin-left: auto;
+            margin-right: auto;
         }
     
     }
