--- a/src/pages/FibersCompare/FibersCompare.scss
+++ b/src/pages/FibersCompare/FibersCompare.scss
@@ -1,8 +1,4 @@
 @use '/src/assets/css/variables' as *;
-$col_first: 200px;
-$col_other: 130px;
-$k_sm: 0.85;
-$k_xs: 0.65;
 
 .page_compare {
     
@@ -23,40 +19,26 @@ $k_xs: 0.65;
     
         & .table__container {
             margin-top: 50px;
-            width: 100%;
+            width: fit-content;
+            max-width: 100%;
             position: relative;
             min-height: 500px;
-            //border: 3px solid red;
-            //overflow: hidden;
-
 
 
             & .table {
-                width: 100%;
                 overflow: auto;
-                //max-width: 100%;
                 display: grid;
                 grid-auto-flow: column;
-                grid-template-rows: 200px repeat(22, auto) 70px;
-                grid-template-columns: $col_first repeat(auto-fit, $col_other);
+                grid-template-rows: auto repeat(23, auto);
+                grid-template-columns: 1fr repeat(auto-fit, 1fr);
+                @include scroll_thin;
 
-                
-                @include respond-to(sm) {
-                    grid-template-rows: 170px repeat(22, auto) 70px;
-                    grid-template-columns: $col_first*$k_sm*0.65 repeat(auto-fit, $col_other*$k_sm);
-                }
-                
-                @include respond-to(xs) {
-                    grid-template-rows: 150px repeat(22, auto) 70px;
-                    grid-template-columns: $col_first*$k_xs*0.75 repeat(auto-fit, $col_other*$k_xs);
-                }
 
 
                 .cell {
                     position: relative;
-                    width: $col_other;
                     height: 100%;
-                    padding: 15px;
+                    padding: 12px;
                     border-right: 1px solid var(--border_compare);
                     border-bottom: 1px solid var(--border_compare);
                     display: flex;
@@ -68,47 +50,16 @@ $k_xs: 0.65;
                     transition: background-color $transition-theme, border $transition_theme;
 
                     @include respond-to(sm) {
-                        padding: 10px;
-                        width: $col_other*$k_sm;
+                        padding: 9px;
                     }
 
                     @include respond-to(xs) {
                         padding: 7px;
-                        width: $col_other*$k_xs;
                     }
 
-                    & > .img__container {
-                        width: 100%;
-                        height: 70px;
 
-                        @include respond-to(sm) {
-                            height: 50px;
-                        }
-                        
-                        & > span {
-                            color: var(--text);
-                            font-weight: 700;
-                            font-size: 18px;
-
-                            @include respond-to(sm) {
-                                font-size: 16px;
-                            }
-
-                            @include respond-to(xs) {
-                                font-weight: 600;
-                                font-size: 13px;
-                            }
-                        }
-                        
-                        & > img {
-                            width: 100%;
-                            height: 100%;
-                            object-fit: cover;
-                        }
-                        
-                    }
                     & .button_blue {
-                        font-size: 14px;
+                        font-size: 0.9rem;
                         padding: 5px 10px;
                         margin-left: auto;
                         margin-right: auto;
@@ -116,30 +67,22 @@ $k_xs: 0.65;
                         @include respond-to(sm) {
                             padding-left: 7px;
                             padding-right: 7px;
-                            font-size: 12px;
+                            font-size: .75rem;
                         }
 
                         @include respond-to(xs) {
                             padding-left: 5px;
                             padding-right: 5px;
-                            font-size: 10px;
+                            font-size: .6rem;
                             font-weight: 400;
                         }
                     }
 
-                    & > span {
+                    & > .values_numeric {
                         color: var(--text);
                         font-weight: 600;
-                        font-size: 18px;
+                        @include fs_smaller;
 
-                        @include respond-to(sm) {
-                            font-size: 16px;
-                        }
-
-                        @include respond-to(xs) {
-                            font-size: 13px;
-                            font-weight: 400;
-                        }
 
                         & > span {
                             font-size: .8em;
@@ -147,13 +90,12 @@ $k_xs: 0.65;
 
                             @include respond-to(xs) {
                                 font-weight: 400;
-   
                             }
                         }
                     }
 
 
-                    &.with-tip {
+                    /*&.with-tip {
                         .tip {
                             height: 17px;
                             width: 17px;
@@ -193,12 +135,11 @@ $k_xs: 0.65;
                                 }
                             }
                         }
-                    }
+                    }*/
 
 
                     & .rating__container {
-                        //height: 60px;
-                        width: 100%;
+                        width: 90%;
                     }
 
                     
@@ -279,12 +220,24 @@ $k_xs: 0.65;
                           background-color: var(--compare_selected);
 
                     }
+
+                    & .rating_money {
+                        height: 20px;
+
+                        @include respond-to(sm) {
+                            height: 16px;
+                        }
+
+                        @include respond-to(sm) {
+                            height: 13px;
+                        }
+
+                    }
                 }
 
                 .fixed-left {
                     position: sticky;
                     left: 0;
-                    width: $col_first;
                     z-index: 2;
                     
                     & button:not(.button_blue) {
@@ -298,15 +251,7 @@ $k_xs: 0.65;
                         & span {
                             text-align: left;
                             font-weight: 700;
-                            font-size: 18px;
-                            
-                            @include respond-to(sm) {
-                                font-size: 16px;
-                            }
-    
-                            @include respond-to(xs) {
-                                font-size: 14px;
-                            }
+                            @include fs_smaller;
                         }
                     }
 
@@ -328,44 +273,28 @@ $k_xs: 0.65;
                     }
                 }
 
-                & .selectors {
-                    flex-wrap: nowrap;
-                    flex-direction: row;
-                    gap: 10px;
-
-                    @include respond-to(sm) {
-                        flex-direction: column;
-                    }
-
-                    & button {
-                        white-space: nowrap;
-                    }
-
-                    & .error-message {
-                        align-self: center;
-                        font-size: 13px;
-                        color: var(--error);
-                        text-align: center;
-                        margin-right: 10px;
-
-                        @include respond-to(sm) {
-                            font-size: 11px;
-                            margin-right: 0;
-                            margin-bottom: 15px;
-                        }
-
-                    }   
-                }
-
 
                 .row-name {
                     padding: 0;
-                    padding-right: 20px;
+                    padding-right: 15px;
                     width: 100%;
+
+                    @include respond-to(sm) {
+                        padding-right: 12px;
+                    }
+
+                    @include respond-to(xs) {
+                        padding-right: 9px;
+                    }
                     
-                    & > .button_blue {
+                    & > .button_compare, .button_reset {
                         margin-top: 15px;
                         margin-bottom: 15px;
+
+                        @include respond-to(xs) {
+                            margin-top: 7px;
+                            margin-bottom: 7px;
+                        }
                     }
 
                     & > a {
@@ -384,27 +313,122 @@ $k_xs: 0.65;
 
                 .col-name {
                     justify-content: space-between;
+                    width: 130px;
+
+                    @include respond-to(md) {
+                        width: 120px;
+                    }
+
+                    @include respond-to(sm) {
+                        width: 100px;
+                    }
+
+                    @include respond-to(xs) {
+                        width: 80px;
+                    }
+
+                    & > .img-cont {
+                        width: 100%;
+                        height: 70px;
+                        overflow: hidden;
+                        border-radius: $brad_sm;
+
+                        @include respond-to(sm) {
+                            height: 50px;
+                        }
+                        
+                        & > img {
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
+                        }
+                        
+                    }
+
+                    & .fiber-name {
+                        color: var(--text);
+                        font-weight: 700;
+                        font-size: .9rem;
+                        margin-top: 5px;
+    
+    
+                        @include respond-to(xs) {
+                            font-weight: 600;
+                            font-size: 0.8rem;
+                            margin-top: 3px;
+                        }
+                    }
+
                     &_last {
                         border-bottom: none;
+
                         & > span {
                             color: var(--main_em);
                             font-weight: 700;
                         }
                     }
+
+                    & .button_sort {
+                        margin-top: 20px;
+
+                        @include respond-to(sm) {
+                            margin-top: 15px;
+                        }
+
+                        @include respond-to(xs) {
+                            margin-top: 12px;
+                        }
+                    }
+                }
+
+
+                & .selectors {
+                    flex-wrap: nowrap;
+                    flex-direction: row;
+                    gap: 10px;
+                    padding-right: 5px;
+
+                    @include respond-to(sm) {
+                        flex-direction: column;
+                        gap: 0;
+                    }
+
+                    & button {
+                        white-space: nowrap;
+                    }
+
+                    & .error-message {
+                        align-self: center;
+                        font-size: 0.85rem;
+                        color: var(--error);
+                        text-align: center;
+                        margin-right: 10px;
+
+                        @include respond-to(sm) {
+                            font-size: 0.8rem;
+                            margin-right: 0;
+                            margin-bottom: 10px;
+                        }
+
+                        @include respond-to(sm) {
+                            font-size: 0.7rem;
+                        }
+
+                    }   
                 }
 
 
 
                 .svg-icon {
-                    width: 20px;
+                    width: 17px;
                     height: auto;
 
                     @include respond-to(sm) {
-                        width: 15px;
+                        width: 14px;
                     }
 
                     @include respond-to(xs) {
-                        width: 12px;
+                        width: 10px;
                     }
                 }
             }
