--- a/src/components/CatalogList/catalog-list.scss
+++ b/src/components/CatalogList/catalog-list.scss
@@ -1,17 +1,15 @@
-//@use "sass:map";
 @use "/src/assets/css/variables" as *;
-//@import '../../../assets/css/base.scss';
 
-.catalog-list__container {
+.catalog-list {
     display: flex;
     align-items: center;
     margin-right: 4%;
     border-right: 1px solid var(--main_em);
     transition: border $transition_theme;
-    padding-right: 30px;
+    padding-right: 20px;
     height: 100%;
     position: relative;
-    min-width: 200px;
+    min-width: 220px;
 
     @include respond-to(sm) {
         border-right: none;
@@ -21,7 +19,7 @@
         margin-right: 0;
         margin-bottom: 50px;
         padding-bottom: 30px;   
-        padding-top: 50px;
+        padding-top: 30px;
 
         &::after {
             content: '';
@@ -47,6 +45,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        @include scroll_thin;
 
 
         @include respond-to(sm) {
@@ -57,12 +56,13 @@
             margin-right: auto;
         }
     
-        & > ul {
+        & > .list__content {
             list-style-type: none;
+            width: 100%;
     
             & > li {
                 transition: $transition_base;
-                font-size: 20px;
+                font-size: 18px;
                 line-height: 40px;
                 cursor: pointer;
                 padding-left: 10px;
@@ -72,14 +72,16 @@
                 font-weight: 500;
                 -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
                 border-radius: 5px;
+                white-space: pre-line;
+                @include fs_bigger;
                 
 
                 @include respond-to(sm) {
                     text-align: center;
                     margin-left: auto;
                     margin-right: auto;
-                    margin-top: 10px;
-                    font-size: 24px;
+                    margin-top: 5px;
+                    //font-size: 24px;
                 }
     
                 &:hover {
