--- a/src/components/Gallery/gallery.scss
+++ b/src/components/Gallery/gallery.scss
@@ -1,7 +1,7 @@
 @use "/src/assets/css/variables" as *;
 
 
-.gallery__container {
+.gallery {
     height: 100%;
     width: 100%;
     display: flex;
@@ -12,14 +12,16 @@
         gap: 10%;
     }
     
-
+    @include respond-to(sm) {
+        justify-content: space-between;
+        gap: 0;
+        height: auto;
+    }
 
     & > a {
         width: 29.5%;
         height: 47%;
         display: block;
-        //margin: 0px 4%;
-        //margin-bottom: 40px;
         cursor: pointer;
         border: 1px solid var(--main_em);
         border-radius: 5px;
@@ -31,30 +33,34 @@
         }
 
         @include respond-to(sm) {
-            //height: 80%;
-            margin-bottom: 20px;
-            height: auto;
+            width: 30%;
+            margin-bottom: 7%;
+        }
+
+        @include respond-to(xs) {
+            width: 47%;
+            margin-bottom: 7%;
         }
         
 
 
-        & .gallery__item {
+        & .gallery__card {
             width: 100%;
             height: 100%;
 
-            
-            @include respond-to(sm) {
-                height: auto;
-            }
 
-            & > .img__container {
+            & > .gallery__card__img-cont {
                 width: 100%;
                 height: 65%;
                 position: relative;
                 overflow: hidden;
+                
+                @include respond-to(sm) {
+                    height: 20vw;
+                }
 
-                @include respond-to(md) {
-                    height: 60%;
+                @include respond-to(xs) {
+                    height: 20vw;
                 }
 
                 
@@ -77,33 +83,26 @@
                 }
             }
     
-            & > .descr__container {
+            & > .gallery__card__text {
                 padding: 10px;
     
                 & .name {
                     display: inline-block;
-                    font-size: 20px;
                     color: var(--main_em);
                     transition: color $transition_theme;
                     font-weight: 700;
                     text-align: left;
                     width: 100%;
+                    @include fs_base;
 
-                    @include respond-to(md) {
-                        font-size: 18px;
-                    }
                 }
 
                 & .price {
                     display: inline-block;
-                    font-size: 20px;
                     color: var(--lang-text_add);
                     transition: color $transition_theme;
                     margin-top: 10px;
-
-                    @include respond-to(md) {
-                        font-size: 16px;
-                    }
+                    @include fs_base;
                 }
     
    
