--- a/src/pages/FibersCompare/FibersCompare.scss
+++ b/src/pages/FibersCompare/FibersCompare.scss
@@ -2,7 +2,7 @@
 
 .page_compare {
     
-    .container_compare {
+    .fibers-compare {
         padding: 30px;
         width: 100%;
         margin-left: auto;
