--- a/src/assets/css/_components.scss
+++ b/src/assets/css/_components.scss
@@ -14,7 +14,6 @@
     color: var(--text);
     background-color: var(--main);
     transition: background-color $transition_theme, color $transition_theme, box-shadow $transition_fast;
-    font-size: 1.1rem;
     font-weight: 600;
     border: none;
     cursor: pointer;
@@ -24,24 +23,18 @@
     border-radius: 5px; 
     //min-height: 1rem;
     justify-content: center;
-
+    @include fs_base;
 
     @include respond-to(md) {
-        font-size: 1rem;
         padding: 6px 40px;
-        //min-height: 35px;
     }
 
     @include respond-to(sm) {
-        font-size: 1rem;
         padding: 6px 40px;
-        //min-height: 30px;
     }
 
     @include respond-to(xs) {
-        font-size: .9rem;
         padding: 3px 20px;
-        //min-height: 25px;
     }
 
     &:hover {
@@ -64,34 +57,20 @@
 }
 
 
-
-.button_order {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.button_light {
     background-color: var(--inputs-bg);
-    font-size: 18px;
-    letter-spacing: 0.1rem;
-    padding: 12px 10%;
-    border: none;
-    border-radius: 4px;
     color: $dark;
-    font-weight: 700;
-    cursor: pointer;
-    text-transform: uppercase;
-    transition: box-shadow $transition_fast, background-color $transition_theme;
-
 
     &:hover {
-        box-shadow: 0px 0px 20px var(--main_em)
+        box-shadow: 0px 0px 20px var(--inputs-bg)
     }
 }
 
 
 
+
 .button_back {
     padding: 8px 20px 8px 60px;
-
 
     & > svg  {
         max-height: 80%;
@@ -127,19 +106,18 @@
 
     & > label {
         display: block;
-        font-size: 1rem;
         transition: color $transition_theme;
         font-weight: 600;
         color: var(--text);
         margin-bottom: 3px;
+        @include fs_smaller;
+
         
         @include respond-to(sm) {
-            font-size: .9rem;
             margin-bottom: 3px;
         }
 
         @include respond-to(xs) {
-            font-size: .8rem;
             margin-bottom: 2px;
         }
     }
@@ -225,6 +203,74 @@
     }
 }
 
+
+.form_full {
+    padding: 40px 50px 50px;
+    margin: 40px auto 0;
+    width: 85%;
+    border-radius: $brad_lg;
+    background-color: var(--main);
+    transition: background-color $transition_theme;
+    box-shadow: 5px 4px 6px 2px rgba(#000, 0.25);
+
+    @include respond-to(md) {
+        width: 90%;
+    }
+
+    @include respond-to(sm) {
+        padding: 50px 20px;
+        width: 100%;
+    }
+
+    @include respond-to(xs) {
+        padding: 50px 20px;
+    }
+
+    & > .block_text > h2 {
+        text-align: center;
+        color: var(--text);
+        font-family: Nunito;
+    }
+
+    & > .form__inputs {
+        width: 100%;
+        display: flex;
+        align-items: stretch;
+        justify-content: space-between;
+
+        @include respond-to(sm) {
+            flex-direction: column;
+        }
+
+        & .form__inputs__texts {
+            width: 47%;
+            display: flex;
+            flex-direction: column;
+
+            
+            @include respond-to(sm) {
+                width: 100%;
+            }
+        }
+
+
+        & > .form__inputs__files {
+            width: 47%;
+
+            
+            @include respond-to(sm) {
+                width: 100%;
+            }
+            
+            & .block_input.files {
+                height: 100%;
+                display: flex;
+                flex-direction: column;   
+            }
+        }
+    }
+
+}
 
 
 
