--- a/src/components/AmountChanger/amount-changer.scss
+++ b/src/components/AmountChanger/amount-changer.scss
@@ -1,12 +1,11 @@
 @use '/src/assets/css/variables' as *;
 
 
-.amount__changer {
+.amount-changer {
     display: flex;
-    
+    @include fs_base;
 
     & input {
-        font-size: 18px;
         padding-right: 5px;
         font-weight: 700;
         outline: none;
@@ -18,11 +17,11 @@
         transition: color 1s, background-color $transition_theme, border $transition_theme;
         border-radius: 5px;
         height: 30px;
+        font-size: 1em;
 
         @include respond-to(sm) {
             height: 25px;
             width: 40px;
-            font-size: 16px;
         }
     }
 
@@ -30,8 +29,8 @@
         background-color: transparent;
         outline: none;
         border: none;
-        font-size: 30px;
-        line-height: 30px;
+        font-size: 1.7em;
+        line-height: .1em;
         font-weight: 800;
         cursor: pointer;
         transition: color 1s, background-color 1s, opacity $transition_fast;
@@ -39,7 +38,6 @@
 
         @include respond-to(sm) {
             line-height: 25px;
-            font-size: 24px;
         }
 
         &:nth-of-type(1) {
