--- a/src/components/CartContent/cart-content.scss
+++ b/src/components/CartContent/cart-content.scss
@@ -1,219 +1,200 @@
 @use '/src/assets/css/variables' as *;
 
 
-.cart-content {
+.cart {
     width: 100%;
     position: relative;
     min-height: 80px;
+    background: var(--main_em);
+    border-radius: $brad_lg;
+    padding: 20px 30px;
+
+    @include respond-to(sm) {
+        padding: 15px 20px;
+    }
     
     & .cart__item {
         display: grid;
         grid-template-columns: 120px 1fr auto;
         grid-template-rows: auto;
-        //justify-content: flex-start;
-        border-bottom: 1px solid var(--main_em);
+        border-top: 2px solid var(--main);
         transition: border $transition_theme;
         padding: 20px 0px;
-        //width: 100%;
+        position: relative;
+
+        &:first-child {
+            border-top: none;
+        }
+
+        @include respond-to(sm) {
+            grid-template-columns: 80px 1fr;
+        }
         
         @include respond-to(xs) {
-            /*flex-wrap: wrap;
-            justify-content: space-between;*/
             grid-template-columns: 90px 1fr;
             grid-template-rows: auto auto;
         }
 
-
-            & > .img__container {
-            cursor: pointer;
-            align-self: center;
-            width: 100%;
-            aspect-ratio: 1;
-            align-self: center;
-            border-radius: 5px;
-            overflow: hidden;
-            position: relative;
-
-
-            & img {
+            & > .wrapper_img {
+                cursor: pointer;
+                align-self: center;
                 width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
- 
-            
+                aspect-ratio: 1;
+                align-self: center;
+                border-radius: 5px;
+                overflow: hidden;
+                position: relative;
+
+                @include respond-to(sm) {
+                    //grid-row: 1/3;
+                }
+
+
+                & img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
         }
 
 
 
-            & .item-descr__container {
-                display: flex;
-                flex-direction: column;
-                margin-left: 20px;
-                justify-content: space-between;
-                padding-right: 30px;
-
-                @include respond-to(sm) {
-                    padding-right: 0;
-                    margin-left: 15px;
-                }
-
-                @include respond-to(xs) {
-                    margin-left: 10px;
-                    gap: 5px;
-                }
-    
-                & .item__block {
-                    display: flex;
-                    flex-direction: row;
-                    align-items: center;
-                    flex-wrap: wrap;
-    
-                    & span {
-                        font-size: 20px;
-
-                        @include respond-to(sm) {
-                            font-size: 16px;
-                        }
-                        @include respond-to(xs) {
-                            font-size: 14px;
-                        }
-                    }
-                                
-                    & > span:first-of-type {
-                        //font-size: 20px;
-                        align-self: flex-start;
-                        margin-right: 10px;
-                    }
-    
-                    & .colors__container {
-                        margin-left: auto;
-                        margin-right: auto;
-                        display: flex;
-                        flex-grow: 1;
-                        align-items: center;
-                        cursor: pointer;
-        
-                        & .color__container {
-                            width: 25px;
-                            height: 25px;
-                            border-radius: 3px;
-                            overflow: hidden;
-                            
-
-                            @include respond-to(sm) {
-                                width: 20px;
-                                height: 20  px;
-                            }
-
-                            
-                            @include respond-to(xs) {
-                                width: 18px;
-                                height: 18px;
-                            }
-
-
-                            & > img {
-                                height: 100%;
-                                width: 100%;object-fit: cover;
-                            }
-                        }
-
-                        & .color__name {
-                            text-decoration: underline;
-                            margin-left: 10px;
-                            text-transform: lowercase;
-                        }
-                    }
-                    
-                }
-    
-            }
-        /*}*/
-
-        
-        .item__amount-delete {
-            //border: 1px solid red;
+        & .item__descriptions {
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            align-items: flex-end;
+            margin-left: 20px;
+            justify-content: space-between;
+            padding-right: 40px;
+
+            @include respond-to(sm) {
+                padding-right: 0;
+                margin-left: 15px;
+            }
 
             @include respond-to(xs) {
-                margin-top: 10px;
-                grid-column-start: 1;
-                grid-column-end: 3;
-                flex-direction: row-reverse;
-                justify-content: space-between;
-                align-items: center ;
+                margin-left: 10px;
+                gap: 5px;
             }
-
-            & .delete__container {
+    
+            & .description {
                 display: flex;
+                flex-direction: row;
                 align-items: center;
-                margin-bottom: auto;
+                flex-wrap: wrap;
+                margin-top: .2rem;
+                @include fs_base;
 
-                @include respond-to(sm) {
-                    margin-left: auto;
-                    margin-right: auto;
-                    padding-left: 7px;
+                & span, a {
+                    color: var(--bg);
+                    font-weight: 600;
                 }
 
-                @include respond-to(xs) {
-                    margin-bottom: 0;
-                    margin-right: 0;
+                & a {
+                    text-decoration: underline;
+                    white-space: break-spaces;
                 }
                 
-                & .delete__wrapper {
-                    width: 22px;
-                    height: 22px;
-                    position: relative;
+                
+                & .description__name {
+                    font-weight: 700;
+                    align-self: flex-start;
+                    margin-right: 10px;
 
                     @include respond-to(sm) {
-                        width: 19px;
-                        height: 19px;
+                        margin-right: 5px;
+                    }
+                }
+    
+                & .color {
+                    margin-left: auto;
+                    margin-right: auto;
+                    display: flex;
+                    flex-grow: 1;
+                    align-items: center;
+                    cursor: pointer;
+    
+                    & .wrapper_img {
+                        width: 25px;
+                        aspect-ratio: 1;
+                        border-radius: 3px;
+                        overflow: hidden;
+                        
+
+                        @include respond-to(sm) {
+                            width: 20px;
+                        }
+
+                        
+                        @include respond-to(xs) {
+                            width: 18px;
+                        }
+
+
+                        & > img {
+                            height: 100%;
+                            width: 100%;
+                            object-fit: cover;
+                        }
                     }
 
+                    & .color__name {
+                        text-decoration: underline;
+                        margin-left: 10px;
+                        text-transform: lowercase;
+                        font-size: .8em;
+                    }
                 }
+                
             }
-
-            & .amount__container {
-                display: flex;
-                align-items: center;
-                margin-bottom: auto;
-
-                @include respond-to(sm) {
-                    margin-left: 7px;
-                    margin-bottom: 0;
-
-                    & .amount__changer {
-                        flex-direction: column-reverse;
-
-                        & button {
-                            margin: 0;
-                        }
-                    }
-                }
-
-                @include respond-to(xs) {
-                    margin-left: 8px;
-
-
-                    & .amount__changer {
-                        flex-direction: row;
-
-                        & button:nth-last-of-type(1) {
-                            margin-left: 5px;
-                        }
-
-                        & button:nth-last-of-type(2) {
-                            margin-right: 5px;
-                        }
-                    }
-                }
-            }
-
+    
         }
+
+
+
+        & .item__remover {
+            position: absolute;
+            top: 0px;
+            right: 0px;
+            width: 20px;
+            aspect-ratio: 1;
+            transform: translateY(100%);
+
+            @include respond-to(sm) {
+                top: auto;
+                right: auto;
+                left: 0;
+                bottom: 0;
+                transform: translateY(-100%);
+            }
+        }
+
+
+        & .amount-wrapper {
+            display: flex;
+            align-items: center;
+            height: 100%;
+
+            @include respond-to(sm) {
+                margin-left: auto;
+                grid-column: 1/-1;
+                padding-top: 10px;
+            }
+
+
+            & > .amount-changer {
+                & button {
+                    color: var(--bg);
+                }
+
+                & input {
+                    background-color: var(--inputs-bg);
+                    color: $black;
+                }
+
+            }
+        }
+
+        
 
         
         .breaker_xs {
