--- a/src/components/Delete/delete.scss
+++ b/src/components/Delete/delete.scss
@@ -1,14 +1,12 @@
 @use "/src/assets/css/variables" as *;
 
-.button_delete__container {
+.button_delete {
     background-color: transparent;
     border: none;
     padding: 0;
-    //position: relative;
     cursor: pointer;
     width: 100%;
     height: 100%;
-    //height: 100%;
     position: relative;
 
     @include respond-to(sm) {
@@ -35,7 +33,7 @@
         }
     }
 
-    & .confirmation__container {
+    & .confirmation {
         background-color: var(--text_reverse);
         padding: 5px;
         display: flex;
@@ -48,7 +46,7 @@
         //visibility: hidden;
         transition: transform $transition-fast;
 
-        & .button_delete_confirm, .button_delete_cancel {
+        & .button_delete__confirm, .button_delete__cancel {
             padding: 0px 10px;
             cursor: pointer;
             font-size: 16px;
@@ -62,7 +60,7 @@
             }
         }
 
-        & .button_delete_cancel {
+        & .button_delete__cancel {
             margin-top: 5px;
             background-color: rgba($color_success, 0.4);
     
