--- a/src/components/ImageModal/image-modal.scss
+++ b/src/components/ImageModal/image-modal.scss
@@ -1,14 +1,14 @@
 @use '/src/assets/css/variables' as *;
 
 
-.image_modal__container {
+.image_modal {
     width: 90%;
     height: 85%;
     display: flex;
     align-items: center;
     flex-direction: column;
 
-    & > .img__wrapper {
+    & > .wrapper_img {
         //flex-grow: 1;
         height: calc(100% - 40px);
         width: 100%;
@@ -20,15 +20,19 @@
         }
     }
 
-    & .descr__container {
+    & .image_modal__text {
         height: 40px;
         display: flex;
         align-items:flex-end;
         justify-content: center;
 
-        & > span {
+        & > .image_modal__text, .image_modal__link {
             color: #EEE;
-            font-size: 18px;
+            @include fs_base;
+        }
+
+        & > .image_modal__link {
+            text-decoration: underline;
         }
     }
 
