--- a/src/components/Message/message.scss
+++ b/src/components/Message/message.scss
@@ -1,7 +1,7 @@
 @use '/src/assets/css/variables' as *;
 
 
-.message__container{
+.message_modal{
     padding: 40px;
     padding-top: 30px;
     z-index: 6000;
@@ -16,7 +16,11 @@
         padding-right: 20px;
     }
 
-    & .text-block {
+    & h3 {
+        color: var(--text);
+    }
+
+    & .message_modal__text {
         border-radius: 10px;
         margin-top: 30px;
         padding: 20px;
@@ -32,23 +36,13 @@
         }
     }
 
-    & > button {
+    & .message_modal__buttons {
         display: flex;
         align-items: center;
-        justify-content: center;
-        background-color: var(--inputs-bg);
-        font-size: 18px;
-        letter-spacing: 0.1rem;
-        padding: 12px 10%;
-        border: none;
-        border-radius: 4px;
+        justify-content: space-between;
         margin-top: 40px;
-        color: #286181;
-        font-weight: 700;
-        cursor: pointer;
-        text-transform: uppercase;
-        margin-left: auto;
     }
+
 
     &.error {
         & > h3 {
