--- a/src/components/NewsBlock/news_block.scss
+++ b/src/components/NewsBlock/news_block.scss
@@ -35,6 +35,10 @@ section.news {
 
     & .show-more-news {
         margin-top: 30px;
+
+        @include respond-to(xs) {
+            padding: 6px 20px;
+        }
         
         & span {
             color: var(--text);
