--- a/src/components/Selector/selector.scss
+++ b/src/components/Selector/selector.scss
@@ -11,17 +11,21 @@
     }
 
     & > select {
+        background-color: var(--bg);
+        cursor: pointer;
         flex-grow: 1;   
         width: fit-content;
-        font-size: 18px;
         font-weight: 600;
         border: 1px solid var(--main_em);
-        transition: border $transition_theme;
+        transition: border $transition_theme, background-color $transition_theme;
         outline: none;
-        padding-left: 5px;
-        padding-right: 10px;
-        border-radius: 5px;
+        border-radius: $brad_md;
         padding: 5px 10px;
+        @include fs_base;
+
+        @include respond-to(md) {
+            padding: 5px 8px;
+        }
     }
     
 }
