--- a/src/pages/ContactUs/contact-us.scss
+++ b/src/pages/ContactUs/contact-us.scss
@@ -5,76 +5,15 @@
     transition: background-color $transition-theme;
     flex-grow: 1;
 
-    & h1 {
+        -top: 20px;
+        & h1 {
         text-align: center;
     }
 
 
     .contact__form {
-        margin-left: auto;
-        margin-right: auto;
-        width: 85%;
-        padding: 30px 50px;
-        padding-top: 20px;
-        margin-top: 30px;
-        border-radius: 10px;
-        background-color: var(--main);
-        transition: background-color $transition_theme;
-        box-shadow: 5px 4px 6px 2px rgba(#000, 0.25);
-
-        @include respond-to(md) {
-            width: 90%;
-        }
-
-        @include respond-to(sm) {
-            padding: 20px 20px;
-            width: 100%;
-        }
 
 
-        & > h2 {
-            text-align: center;
-            color: var(--text);
-            font-family: Nunito;
-        }
-
-        & > .user-inputs {
-            width: 100%;
-            display: flex;
-            align-items: stretch;
-            justify-content: space-between;
-
-            @include respond-to(sm) {
-                flex-direction: column;
-            }
-
-            & .user-inputs__texts {
-                width: 50%;
-                display: flex;
-                flex-direction: column;
-
-                
-                @include respond-to(sm) {
-                    width: 100%;
-                }
-            }
-
-
-            & > .user-inputs__files {
-                width: 45%;
-
-                
-                @include respond-to(sm) {
-                    width: 100%;
-                }
-                
-                & .block_input.files {
-                    height: 100%;
-                    display: flex;
-                    flex-direction: column;   
-                }
-            }
-        }
 
         .cart-content__container {
             width: 100%;
