--- a/src/pages/Product/product.scss
+++ b/src/pages/Product/product.scss
@@ -6,7 +6,7 @@
     transition: background-color 1s;
     padding-bottom: 100px;
 
-    .details__block {
+    .product {
         display: flex;
         margin-top: 50px;
         //border: 1px solid red;
@@ -15,7 +15,7 @@
             flex-direction: column;
         }
 
-        .details__splider {
+        .product__images {
             width: 40%;
             aspect-ratio: 1.7;
     
@@ -28,16 +28,6 @@
             }
         }
 
-        .details__descr-order {
-            max-width: 60%;
-            padding: 20px 20px 30px 5%;
-        
-            
-            @include respond-to(sm) {
-                padding: 50px 0px 30px;
-                max-width: 100%;
-            }
-        }
     }
 
 
