--- a/src/pages/Admin/FiberCreator/fiber-creator.scss
+++ b/src/pages/Admin/FiberCreator/fiber-creator.scss
@@ -115,7 +115,7 @@
                     width: 30%;
 
                     & .selector {
-                        flex-direction: column;
+                        //flex-direction: column;
 
                         & label {
                             align-self: flex-start;
