--- a/src/assets/css/_components.scss
+++ b/src/assets/css/_components.scss
@@ -123,7 +123,7 @@
     }
 
 
-    & > input, textarea {
+    & > input, textarea, select {
         font-size: 1.1rem;
         width: 100%;
         outline: none;
@@ -152,6 +152,10 @@
             @include respond-to(xs) {
                 border: 1px solid $black;
             }
+        }
+
+        & > option {
+            color: $black;
         }
     }
 
@@ -310,78 +314,6 @@
     }
 
 
-    /*& .form__inputs_3 {
-        & .block_input, .block_input_header {
-            display: grid;
-            grid-template-columns: 150px 1fr 1fr;
-            gap: 10px 20px;
-            margin-top: 30px;
-
-
-
-            @include respond-to(md) {
-                grid-template-columns: 150px 1fr;
-                border-bottom: 1px solid var(--main_em);
-                margin-top: 30px;
-                padding-bottom: 35px;
-
-                &:nth-of-type(5) {
-                    border-bottom: none;
-                }
-            }
-
-            @include respond-to(xs) {
-                grid-template-columns: 1fr;
-            }
-
-            & span, h3 {
-                text-align: center;
-            }
-
-
-
-
-            & label {
-                min-width: 160px;
-                align-self: center;
-                white-space: nowrap;
-                font-size: 18px;
-
-                @include respond-to(md) {
-                    grid-row-start: 1;
-                    grid-row-end: 3;
-                }
-            }
-
-
-            .input__wrapper {
-                position: relative;
-                &::before {
-                    @include respond-to(md) {
-                        font-size: 14px;
-                        content: 'EN';
-                        position: relative; 
-                        left: 0%;
-                        top: 0px;
-                        transform: translate(0, -50%);
-                    }   
-                }
-
-                &:nth-of-type(2)::before {
-                    @include respond-to(md) {
-                        content: 'RU';
-                    }
-                }
-
-                &.error {
-                    border: 1px solid red;
-                }
-            }
-
-        }
-
-
-    }*/
 
     & > button {
         @extend .button_blue;
