--- a/src/components/Featurer/featurer.scss
+++ b/src/components/Featurer/featurer.scss
@@ -2,32 +2,20 @@
 
 
 
-.features__container {
+.features {
 
-    & .features {
+    & .features__list {
 
         & .block_feature {
             display: grid;
-            grid-template-columns: 1fr 1fr 35px;
+            grid-template-columns: 1fr 1fr auto;
             gap: 20px 40px;
             position: relative;
-            margin-top: 15px;
+            align-items: stretch;
 
-            & .input__wrapper {
-                &.error {
-                    border: 1px solid red;
-                }
-            }
-
-            span {
-                text-align: center;
-            }
             
             @include respond-to(md) {
-                grid-template-columns: 1fr 1fr 40px;
                 gap: 20px 20px;
-                border-bottom: 1px solid var(--main_em);
-                padding-bottom: 20px;
 
                 &:last-child {
                     border-bottom: none;
@@ -46,30 +34,40 @@
                 }
             }
 
+            & > .block_input {
+                display: flex;
+                flex-direction: column;
+
+                & > textarea {
+                    flex-grow: 1;
+                    min-height: 2.1rem;
+                    height: 2.1rem;
+                }
+            }
+
             
 
 
-            & .del {
+            & .button_feature_delete {
                 margin-top: 0;
                 padding-left: 10px;
                 padding-right: 10px;
                 align-self: self-end;
                 justify-self: end;
-                background-color: var(--main_em);
+
             }
         }
 
     }
-    & .add {
+    & .button_feature_add {
         padding-left: 20px;
         padding-right: 20px;
-        margin-top: 20px;
+        margin-top:  30px;
         margin-right: auto;
         margin-left: auto;
-        background-color: var(--main_em);
 
         @include respond-to(xs) {
-            width: 100%;
+            //width: 100%;
             display: grid;
             place-items: center;
         }
