--- a/src/pages/Admin/CatalogCreator/catalog-creator.scss
+++ b/src/pages/Admin/CatalogCreator/catalog-creator.scss
@@ -3,7 +3,7 @@
 
 .page_creator_catalog {
 
-    & form {
+    /*& form {
         margin-top: 70px;
         gap: 30px 40px;
         background-color: var(--main);
@@ -137,7 +137,7 @@
             }
         }
 
-    }
+    }*/
 
 
 
