--- a/src/components/Picker/picker.scss
+++ b/src/components/Picker/picker.scss
@@ -9,7 +9,7 @@
     padding: 30px 20px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 30px;
+    //margin-top: 30px;
     display: flex;
     flex-wrap: wrap;
     align-items: stretch;
