--- a/src/pages/Admin/ProductCreator/product-creator.scss
+++ b/src/pages/Admin/ProductCreator/product-creator.scss
@@ -1,7 +1,7 @@
 @use '/src/assets/css/variables' as *;
 
 
-.page_creator_fiber {
+.page_creator_product {
 
     & form {
         margin-top: 70px;
