--- a/src/pages/Admin/creator.scss
+++ b/src/pages/Admin/creator.scss
@@ -1,6 +1,6 @@
 @use '/src/assets/css/variables' as *;
 
-
+/*
 .page_add {
 
     & form {
@@ -192,7 +192,7 @@
             }
         }*/
 
-        & .images__header {
+      /*  & .images__header {
                 text-align: center;
                 margin-left: 0;
                 margin-top: 70px;
@@ -305,4 +305,4 @@
         }
 
     }
-}
+}*/
