product create redesign created

--- a/src/components/ProductDetails/product-details.scss
+++ b/src/components/ProductDetails/product-details.scss
@@ -75,7 +75,7 @@
                 }
 
                 & label {
-                    margin-bottom: 0 !important;
+                    //margin-bottom: 0 !important;
                     width: 95px;
 
                     @include respond-to(md) {
