--- a/src/assets/css/_components.scss
+++ b/src/assets/css/_components.scss
@@ -137,7 +137,7 @@
 
         @include respond-to(sm) {
             font-size: 1rem;
-            padding: 3px 5px !important;
+            padding: 3px 5px;
         }
 
         @include respond-to(xs) {
@@ -326,14 +326,6 @@
         }
     }
 
-    & .block_feature {
-        & > .block_input {
-            & > textarea {
-                //fle
-            }
-        }
-    }
-
 
 
     & > button {
@@ -355,6 +347,8 @@
     }
 
 }
+
+
 
 
 .block_inputs_3 {
